--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spacio",
   "version": "0.1.0",
   "homepage": "http://Shanmugavasan.github.io/spacio.io",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
